--- a/base_prog2_redSocial/partials/head.ejs
+++ b/base_prog2_redSocial/partials/head.ejs
@@ -1,15 +1,12 @@
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FalseBook</title>
+    <title>InstaCars</title>
     <link rel="icon"
-        href="https://w7.pngwing.com/pngs/624/811/png-transparent-computer-icons-facebook-social-media-f-logo-cross-brand.png"
+        href="https://findicons.com/files/icons/1012/racing_cars/256/ferrari.png"
         type="image/x-icon">
 
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/general.css">
 
     <!-- UiKit -->
     <!-- <link rel="stylesheet" href="css/uikit.min.css">
@@ -23,4 +20,18 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
+
+
+    <link rel="stylesheet" href="../stylesheets/registracion.css">
+    <link rel="stylesheet" href="../stylesheets/header.css">
+    <link rel="stylesheet" href="../stylesheets/footer.css">
+    <link rel="stylesheet" href="../stylesheets/general.css">
+    <link rel="stylesheet" href="../stylesheets/index.css">
+    <link rel="stylesheet" href="../stylesheets/agregarPost.css">
+    <link rel="stylesheet" href="../stylesheets/detallePost.css">
+    <link rel="stylesheet" href="../stylesheets/detalleUsuario.css">
+    <link rel="stylesheet" href="../stylesheets/login.css">
+    <link rel="stylesheet" href="../stylesheets/miPerfil.css">
+    
 </head>
+</html>
