--- a/base_prog2_redSocial/partials/headerLogueado.ejs
+++ b/base_prog2_redSocial/partials/headerLogueado.ejs
@@ -1,13 +1,15 @@
-<header class="uk-background-primary">
+<html>
+<header class="negroFondo">
     <section class=" uk-container uk-container-large">
         <div class="">
             <nav class="" uk-navbar>
                 <div class="uk-navbar-left">
-                    <h2 class="logo"><a href="index.html">FalseBook</a></h2>
+                    <h2 class="logo"><a href="index.html">InstaCars</a></h2>
                 </div>
                 <div class="uk-navbar-center">
                     <ul class="uk-flex uk-flex-between uk-flex-middle">
                         <li><a href="index.html">Home</a></li>
+                    <!-- <li><a href="addPost.html">Postear</a></li> -->
                         <li><a href="">Logout</a></li>
                     </ul>
                 </div>
@@ -23,3 +25,4 @@
         </div>
     </section>
 </header>
+</html>
