--- a/base_prog2_redSocial/editarPerfil.ejs
+++ b/base_prog2_redSocial/editarPerfil.ejs
@@ -1,8 +1,10 @@
+<html>
 
 <%- include("./partials/head") %> 
 
 <body>
-    <%- include("./partials/headerLogueado") %> 
+    
+<%- include("./partials/headerLogueado") %> 
 
     <main>
         <div class="uk-section uk-section-small">
@@ -25,3 +27,5 @@
     <%- include("./partials/footer") %> 
 
 </body>
+
+</html>
