--- a/base_prog2_redSocial/resultadoBusqueda.ejs
+++ b/base_prog2_redSocial/resultadoBusqueda.ejs
@@ -1,7 +1,10 @@
+<html>
+
 <%- include("./partials/head") %> 
 
 <body>
-    <%- include("./partials/headerLogueado") %> 
+    
+<%- include("./partials/headerLogueado") %> 
 
     <main>
         <div class="uk-section uk-section-small">
@@ -16,3 +19,5 @@
     <%- include("./partials/footer") %> 
 
 </body>
+
+</html>
