--- a/base_prog2_redSocial/detallePost.ejs
+++ b/base_prog2_redSocial/detallePost.ejs
@@ -1,7 +1,10 @@
+<html>
+
 <%- include("./partials/head") %> 
 
 <body>
-    <%- include("./partials/headerLogueado") %> 
+
+<%- include("./partials/headerLogueado") %> 
 
     <main>
         <div class="uk-section uk-section-xsmall">
@@ -128,3 +131,5 @@
     <%- include("./partials/footer") %> 
 
 </body>
+
+</html>
