--- a/base_prog2_redSocial/detalleUsuario.ejs
+++ b/base_prog2_redSocial/detalleUsuario.ejs
@@ -1,7 +1,11 @@
+<html>
+
 <%- include("./partials/head") %> 
 
 <body>
-    <%- include("./partials/headerLogueado") %> 
+
+<%- include("./partials/headerLogueado") %> 
+
     <main>
         <div class="uk-section uk-section-small">
             <div class="uk-container uk-container-small">
@@ -89,3 +93,5 @@
     <%- include("./partials/footer") %>     
 
 </body>
+
+</html>
