--- a/base_prog2_redSocial/index.ejs
+++ b/base_prog2_redSocial/index.ejs
@@ -1,8 +1,10 @@
+<html>
+
 <%- include("./partials/head") %> 
 
 <body>
     
-    <%- include("./partials/headerDeslogueado") %> 
+<%- include("./partials/headerDeslogueado") %> 
 
     <main>
         <div class="uk-section uk-section-small">
@@ -75,3 +77,5 @@
     <%- include("./partials/footer") %> 
 
 </body>
+
+</html>
