--- a/base_prog2_redSocial/partials/footer.ejs
+++ b/base_prog2_redSocial/partials/footer.ejs
@@ -1,9 +1,9 @@
 <html>
 <footer class="uk-background-primary uk-flex uk-flex-between uk-flex-middle fondoFooter">
     <ul class="uk-width-1-6 uk-flex uk-flex-middle uk-flex-around uk-height-1-1 uk-margin-remove uk-padding-remove">
-        <li><a href="" uk-icon="instagram"></a></li>
-        <li><a href="" uk-icon="facebook"></a></li>
-        <li><a href="" uk-icon="twitter"></a></li>
+        <li><a href="https://www.instagram.com/" uk-icon="instagram"></a></li>
+        <li><a href="https://www.facebook.com/" uk-icon="facebook"></a></li>
+        <li><a href="https://twitter.com/" uk-icon="twitter"></a></li>
     </ul>
     
     <ul class="uk-width-1-3 uk-flex uk-flex-middle uk-flex-between uk-height-1-1 uk-margin-remove uk-padding-remove">
