--- a/base_prog2_redSocial/partials/headerDeslogueado.ejs
+++ b/base_prog2_redSocial/partials/headerDeslogueado.ejs
@@ -4,13 +4,13 @@
         <div class="">
             <nav class="" uk-navbar>
                 <div class="uk-navbar-left">
-                    <h2 class="logo"><a href="/index">InstaCars</a></h2>
+                    <h2 class="logo"><a href="../index.ejs">InstaCars</a></h2>
                 </div>
                 <div class="uk-navbar-center">
                     <ul class="uk-flex uk-flex-between uk-flex-middle">
-                        <li><a href="/index">Home</a></li>
-                        <li><a href="/registracion">Registro</a></li>
-                        <li><a href="/login">Login</a></li>
+                        <li><a href="../index.ejs">Home</a></li>
+                        <li><a href="../registracion.ejs">Registro</a></li>
+                        <li><a href="../login.ejs">Login</a></li>
                     </ul>
                 </div>
                 <div class="uk-navbar-right">
