--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -1,11 +1,81 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<%- include("./partials/head") %> 
+
+<body>
+    
+<%- include("./partials/headerDeslogueado") %> 
+
+    <main>
+        <div class="uk-section uk-section-small">
+            <div class="uk-container uk-container-large uk-flex">
+                <section id="posts" class="uk-flex uk-flex-middle uk-flex-center uk-flex-column uk-child-width-1-2 uk-width-1-1">
+                   
+                   
+
+                    <% for( let i = 0; i < 10; i++ ) { %>
+                    <article class="post uk-card-default uk-flex uk-flex-column">
+                        <div class="info-usuario uk-flex ">
+                            <div class="fotoPerfil">
+                                <img src="/images/fUsuario/logo.png" alt="">
+                            </div>
+
+                            <h4><a href="/detalleUsuario"><%=usuarios[i].nombre%></a></h4>
+
+                        </div>
+
+                        <div class="post-body uk-flex uk-flex-center">
+                            <a href="/detallePost/id/<%= usuarios[i].id %>">
+                                <img src="../<%=posts[i].foto%>" alt="">
+                            </a>
+
+                        </div>
+
+                        <div class="post-reacciones">
+                            <ul class="post-icons uk-flex uk-flex-between">
+                                <li><span class="" uk-icon="icon:heart; ratio: 1.3"></span>
+                                </li>
+                                <li><span class="" uk-icon="icon:comments; ratio: 1.3"></span>
+                                </li>
+                            </ul>
+
+                            <div class="post-pie uk-flex">
+                                <h5 class="uk-width-1-6"><a href="/detalle-usuario"><%=posts[i].username%></a></h5>
+                                <p class="uk-width-5-6 pieDeFoto"><%=posts[i].pie_de_foto%></p>
+                            </div>
+
+                        </div>
+                       
+                        <div class="post-comentarios">
+                            <h6>Comentarios:</h6>
+                            <ul>
+                                <li>
+                                    <a href="/detalleUsuario"><%=usuarios[i].nombre%></a>
+                                    <p><%=comentario[i].comentario%></p>
+                                </li>
+                                <li>
+                                    <a href="detalleUsuario"><%=usuarios[i].nombre%></a>
+                                    <p><%=comentario[i].comentario%></p>
+                                </li>
+                                <a href="">Ver más...</a>
+                            </ul>
+                            
+                        </div>
+                    
+                    </article>
+                    <% } %>
+  
+  
+       
+                </section>
+  
+            </div>
+        </div>
+       
+    </main>
+ 
+    <%- include("./partials/footer") %> 
+
+</body>
+
 </html>
