--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -13,20 +13,20 @@
                    
                    
 
-                    <% for( let i = 0; i < 10; i++ ) { %>
+                    <% for( let i = 0; i < posts.length; i++ ) { %>
                     <article class="post uk-card-default uk-flex uk-flex-column">
                         <div class="info-usuario uk-flex ">
                             <div class="fotoPerfil">
-                                <img src="/images/fUsuario/logo.png" alt="">
+                                <img src="/images/fUsuario/ <%= posts[i].Usuario.fotoPerfil %> " alt="">
                             </div>
 
-                            <h4><a href="/detalleUsuario"><%=usuarios[i].nombre%></a></h4>
+                            <h4><a href="/detalleUsuario"><%= posts[i].Usuario.nombre %></a></h4>
 
                         </div>
 
                         <div class="post-body uk-flex uk-flex-center">
-                            <a href="/detallePost/id/<%= usuarios[i].id %>">
-                                <img src="../<%=posts[i].foto%>" alt="">
+                            <a href="/detallePost/id/<%= posts[i].id %>">
+                                <img src="/images/<%= posts[i].foto %>" alt="">
                             </a>
 
                         </div>
@@ -50,12 +50,12 @@
                             <h6>Comentarios:</h6>
                             <ul>
                                 <li>
-                                    <a href="/detalleUsuario"><%=usuarios[i].nombre%></a>
-                                    <p><%=comentario[i].comentario%></p>
+                                    <a href="/detalleUsuario"><%= posts[i].Usuario.nombre %></a>
+                                    
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario"><%=usuarios[i].nombre%></a>
-                                    <p><%=comentario[i].comentario%></p>
+                                    <a href="detalleUsuario"><%= posts[i].Usuario.nombre %></a>
+                                   
                                 </li>
                                 <a href="">Ver más...</a>
                             </ul>
