--- a/myapp/views/partials/head.ejs
+++ b/myapp/views/partials/head.ejs
@@ -22,16 +22,16 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
 
 
-    <link rel="stylesheet" href="../stylesheets/registracion.css">
-    <link rel="stylesheet" href="../stylesheets/header.css">
-    <link rel="stylesheet" href="../stylesheets/footer.css">
-    <link rel="stylesheet" href="../stylesheets/general.css">
-    <link rel="stylesheet" href="../stylesheets/index.css">
-    <link rel="stylesheet" href="../stylesheets/agregarPost.css">
-    <link rel="stylesheet" href="../stylesheets/detallePost.css">
-    <link rel="stylesheet" href="../stylesheets/detalleUsuario.css">
-    <link rel="stylesheet" href="../stylesheets/login.css">
-    <link rel="stylesheet" href="../stylesheets/miPerfil.css">
+    <link rel="stylesheet" href="/stylesheets/registracion.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/footer.css">
+    <link rel="stylesheet" href="/stylesheets/general.css">
+    <link rel="stylesheet" href="/stylesheets/index.css">
+    <link rel="stylesheet" href="/stylesheets/agregarPost.css">
+    <link rel="stylesheet" href="/stylesheets/detallePost.css">
+    <link rel="stylesheet" href="/stylesheets/detalleUsuario.css">
+    <link rel="stylesheet" href="/stylesheets/login.css">
+    <link rel="stylesheet" href="/stylesheets/miPerfil.css">
     
 </head>
 </html>
