--- a/myapp/public/stylesheets/header.css
+++ b/myapp/public/stylesheets/header.css
@@ -4,44 +4,55 @@
 
 
 header{
-    height: 55px;
+    height: 90px;
     padding-top: 10px;
+    background-color: black;
 }
+
 header section{
     height: 100%;
 }
+
 header section nav{
     height: 100%;
 }
-header nav ul li a,
-header a{
+
+header nav ul li a{
     color: white;
+    text-decoration: underline;
 }
+
 header nav ul li a:hover,
 header a:hover{
     color: lightsteelblue;
     text-decoration: none;
 }
+
 .logo{
     margin: 0px;
 }
+
 .logo a{
     font-family: 'Fjalla One', sans-serif;
-    color: white;
+    color: red;
 }
+
 .logo a:hover {
     text-decoration: none;
-    color: white;
+    color: blue;
 }
+
 header ul{
     margin: 0;
     padding: 0;
     list-style: none;
 }
+
 header div.uk-navbar-center ul li{
     padding: 0 10px;
     border-right: 1px solid white;
 }
+
 header .uk-navbar-right a{
     margin-right: 15px;
 }
@@ -49,6 +60,7 @@ header .uk-navbar-right a{
 header div.uk-navbar-center ul li:nth-last-child(1){
     border-right: none;
 }
+
 header nav form input, header nav form ::placeholder, header nav form span{
     color: white !important;
 }
