--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -17,7 +17,7 @@
                     <article class="post uk-card-default uk-flex uk-flex-column">
                         <div class="info-usuario uk-flex ">
                             <div class="fotoPerfil">
-                                <img src="/public/images/fUsuario/ <%= posts[i].Usuario.fotoPerfil %> " alt="">
+                                <img src="images/fUsuario/logo.png " alt="">
                             </div>
 
                             <h4><a href="/detalleUsuario"><%= posts[i].Usuario.nombre %></a></h4>
