--- a/myapp/views/login.ejs
+++ b/myapp/views/login.ejs
@@ -15,12 +15,12 @@
 
                     <div>
                         <label for="email" class="log">Correo Electrónico</label>
-                        <input class= "input" type="email" name="email" id="">
+                        <input class= "input" type="email" name="email" id="email" placeholder="Ingrese su email">
                     </div>
 
                     <div>
                         <label for="password" class="log">Contraseña</label>
-                        <input class= "input" type="password" name="password" id="">
+                        <input class= "input" type="password" name="password" id="password" placeholder="Ingrese su contraseña">
                     </div>
 
                     <div>
