--- a/myapp/views/registracion.ejs
+++ b/myapp/views/registracion.ejs
@@ -15,23 +15,23 @@
                 
                 <form action="/registracion" method="POST">
                     <div>
-                        <label for="email" class="form">Correo Electrónico</label>
-                        <input class= "input" type="email" name="email" id="">
-                    </div>
-
+                        <label for="nombre" class="form">Nombre</label>
+                        <input class="input" type="nombre" name="nombre"  id="nombre" placeholder="Ingrese su nombre">
+                      </div>
+                    
                     <div>
-                        <label for="telefono" class="form">Número de Telefono</label>
-                        <input class= "input" type="number" name="telefono" id="">
+                        <label for="email" class="form">Correo Electrónico</label>
+                        <input class= "input" type="email" name="email" id="email" placeholder="Ingrese su email">
                     </div>
 
                     <div>
                         <label for="password" class="form">Contraseña</label>
-                        <input class= "input" type="password" name="password" id="">
+                        <input class= "input" type="password" name="password" id="password" placeholder="Ingrese su contraseña">
                     </div>
 
                     <div>
-                        <label for="password" class="form">Confirme su contraseña</label>
-                        <input class= "input" type="password" name="password" id="">
+                        <label for="fecha" class="form">Fecha de Nacimiento</label>
+                        <input class="input" type="date" name="fecha" id="fecha" placeholder="Fecha de nacimiento">
                     </div>
 
                     <div>
