--- a/myapp/views/partials/footer.ejs
+++ b/myapp/views/partials/footer.ejs
@@ -7,8 +7,7 @@
     </ul>
     
     <ul class="uk-width-1-3 uk-flex uk-flex-middle uk-flex-between uk-height-1-1 uk-margin-remove uk-padding-remove">
-        <li>Santiago Jordan</li>
-        <li>Camila Wagner</li>
+        <li class="nombreIntegrante">Santiago Jordan</li>
     </ul>
 </footer>
 </html>
