--- a/myapp/views/partials/headerLogueado.ejs
+++ b/myapp/views/partials/headerLogueado.ejs
@@ -4,18 +4,18 @@
         <div class="">
             <nav class="" uk-navbar>
                 <div class="uk-navbar-left">
-                    <h2 class="logo"><a href="../index.ejs">InstaCars</a></h2>
+                    <h2 class="logo"><a href="/index">InstaCars</a></h2>
                 </div>
                 <div class="uk-navbar-center">
                     <ul class="uk-flex uk-flex-between uk-flex-middle">
-                        <li><a href="../index.ejs">Home</a></li>
+                        <li><a href="/index">Home</a></li>
                     <!-- <li><a href="addPost.html">Postear</a></li> -->
-                        <li><a href="">Logout</a></li>
+                        <li><a href="/logout">Logout</a></li>
                     </ul>
                 </div>
                 <div class="uk-navbar-right">
-                    <a href="../agregarPost.ejs">Agregar post</a>
-                    <a href="../miPerfil.ejs">Mi perfil</a>
+                    <a href="/agregarPost" class="barraNav">Agregar post</a>
+                    <a href="/miPerfil" class="barraNav">Mi perfil</a>
                     <form action="" class="uk-search uk-search-default">
                         <span uk-search-icon></span>
                         <input type="search" class="uk-search-input" placeholder="Buscar...">
