--- a/myapp/views/login.ejs
+++ b/myapp/views/login.ejs
@@ -11,7 +11,7 @@
             <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
                 <div class="login"> 
                     <h1 class="titulo">Login</h1>
-                <form action="/login" method="POST">
+                <form action="" method="POST">
 
                     <div>
                         <label for="email" class="log">Correo Electrónico</label>
