--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -48,7 +48,7 @@
                        
                         <div class="post-comentarios">
                     
-                            <h6>Comentarios: <%= posts[i].comentarios.length %></h6>
+                            <h6> <%= posts[i].comentarios.length %> comentarios</h6>
                             
                             <% for( let j = 0; j < posts[i].comentarios.length; j++ ) { %>
                                 <li>
